--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/react-dom": "^19",
     "@types/recharts": "^1.8.29",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "tsx": "^3.12.7"
+    "tsx": "^3.14.0",
+    "typescript": "^5"
   }
 }
